@@ -1,5 +1,5 @@
 /*
-    Copyright 2009-2010, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 2009-2012, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -10,4 +10,4 @@
 #include <fost/counter.hpp>
 #include <fost/thread.hpp>
 #include <fost/workerpool.hpp>
-#include <fost/workerqueue.hpp>
+
